crates/reinhardt-pages/tests/ui/style/fail/invalid_receiver_method.rs
use reinhardt_pages::{style_def};

#[style_def]
static STYLES: CardStyles = style! {
	.card {
		color: 1px.mix(red, 10%);
	}
};
fn main() {}
