crates/reinhardt-pages/tests/ui/style/fail/invalid_receiver_method.stderr
error: method `mix` is not available on `Length`; use a method registered for that receiver type
 --> tests/ui/style/fail/invalid_receiver_method.rs:6:10
  |
6 |         color: 1px.mix(red, 10%);
  |                ^^^
